# kmd-checker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/kmd_checker/: __init__.py  cli.py  entities.py  sessions.py  settings.py  web.py
src/kmd_checker/services/: archive.py  article_parser.py  cad_to_pdf.py  extractor.py  judge.py  llm_client.py  pdf_render.py  pipeline.py  rules_engine.py
src/kmd_checker/static/: index.html
tests/: test_archive.py  test_article_parser.py  test_rules_engine.py  test_smoke.py
